[metadata]
name = cltcache
version = 1.2.1
author = Fredrik Nordin
author_email = freddan007@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/freedick/cltcache
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX

[options]
package_dir = 
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cltcache = cltcache.cltcache:main
